# ai-cli-handoff

./: README.html  README.md  pyproject.toml
skills/ai-handoff/: SKILL.md
skills/ai-handoff/agents/: openai.yaml
skills/ai-handoff/references/: cli-ux.md
skills/ai-handoff/scripts/: ai_handoff.py
src/ai_handoff/: __init__.py  cli.py  handoff_impl.py
tests/: test_ai_handoff.py
